# interview_ai

./: .gitignore  App.tsx  CLOUDFLARE_BACKEND_SUPPORT.md  CLOUDFLARE_BROWSER_DEBUG.md  CLOUDFLARE_CACHE_DNS_FIX.md  CLOUDFLARE_CHECK_NOW.md  CLOUDFLARE_DEPLOYMENT.md  CLOUDFLARE_FINAL_FIX.md  CLOUDFLARE_PAGES_FIX.md  CLOUDFLARE_PAGES_REDIRECT_FIX.md  CLOUDFLARE_PAGES_TROUBLESHOOTING.md  CLOUDFLARE_QUICK_FIX.md  CLOUDFLARE_REDIRECT_SOLUTION.md  CLOUDFLARE_SIMPLE_SOLUTION.md  CLOUDFLARE_SITE_NOT_LOADING.md  CLOUDFLARE_TIMEOUT_FIX.md  CLOUDFLARE_VS_RENDER.md  CLOUDFLARE_WRANGLER_FIX.md  Dockerfile  HETZNER_COMMANDS.md  HETZNER_DEPLOYMENT.md  HETZNER_QUICKSTART.md  HETZNER_README.md  PRODUCTION_API_EXAMPLES.md  README.md  README_SAAS.md  RENDER_DEPLOYMENT.md  RENDER_LOG_CHECK.md  RENDER_PRODUCTION_CHECKLIST.md  SORUN_TESPIT_404.md  WEBHOOK_REPORT_FORMAT.md  deploy.sh  index.html  metadata.json  netlify.toml  package.json  render.yaml  setup-hetzner.sh  test_ats_connection.py  test_new_session.sh  (+3 more)
backend/: .env.example  README.md  build.sh  env.template.hetzner  mock_ats_server.py  pyproject.toml  requirements.txt  reset_admin.py  reset_admin_password.py  setup_cron.sh
backend/config/: asgi.py  settings.py  urls.py
backend/interview_api/: admin.py  ats_service.py  consumers.py  encryption.py  gemini_service.py  middleware.py  models.py  profile_models.py  profile_serializers.py  profile_views.py  routing.py  serializers.py  urls.py  views.py
backend/interview_api/migrations/: 0001_initial.py  0002_prompt_prompt_interview_a_type_013214_idx.py  0006_remove_legacy_fields.py  (+9 more)
(+66 files in other folders)
