[project]
name = "interview-backend"
version = "0.1.0"
description = "AI Interview Platform Backend"
requires-python = ">=3.9"
dependencies = [
    "Django==4.2.0",
    "djangorestframework==3.14.0",
    "django-cors-headers==4.3.1",
    "python-dotenv==1.0.0",
    "psycopg2-binary==2.9.9",
    "dj-database-url==2.1.0",
    "google-generativeai==0.8.3",
    "google-genai>=0.2.0",
    "cryptography==46.0.3",
    "requests==2.32.3",
    "drf-spectacular==0.27.2",
    "Pillow==10.4.0",
    "gunicorn==21.2.0",
    "whitenoise==6.6.0",
    "daphne>=4.0.0",
    "channels>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = []

